# Patient-Management-System

./: .gitignore  CMakeLists.txt  README.md  Uwuspeak.h
src/: Uwuspeak.h  main.cpp  memory_check.bat  memory_check.cpp  test_main.cpp
src-uwuspeak/Database/: Database.h  DatabaseInstance.h
src-uwuspeak/Module/: PatientModule.h
src/Application/: Application.cpp  Application.h  ResourcePool.cpp  ResourcePool.h
src/Database/: Database.h  DatabaseInstance.h
src/Module/: DoctorModule.cpp  DoctorModule.h  Module.cpp  Module.h  NurseModule.cpp  NurseModule.h  NurseModuletest.cpp  PatientModule.h  UI.cpp  UI.h
src/Structures/: CtimeWrapper.h  Doctor.cpp  Doctor.h  List.h  Nurse.cpp  Nurse.h  Patient.cpp  Patient.h  PatientRecord.cpp  Role.cpp  Role.h
src/Test/: ListTest.h
src/Util/: Console.h  Util.h
